# raspi_pico

./: .gitignore  README.md
pico_w/spi_mcp3002_adc/: CMakeLists.txt  main.c
src/: CMakeLists.txt  pico_sdk_import.cmake
src/pico_w/: CMakeLists.txt
src/pico_w/spi_mcp3002_adc/: main.c
src/pico_w/thermistor_temperature/: CMakeLists.txt  main.c
